--- a/Gyakorlás 2/Forrás/3. Egzotikus virágok/egzotikus.html
+++ b/Gyakorlás 2/Forrás/3. Egzotikus virágok/egzotikus.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
+<html lang="hu">
 <html>
 <head>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <script src="js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="egzotikus.css">
+  <title>Egzotikus virágok</title>
 </head>
 
 <body>
@@ -59,6 +63,7 @@
           sötét rózsaszín, bíborszínű, valamint ezek keveréke. Egyes fajták a tavaszi virágzás után nyári
           másodvirágzással is megörvendeztetnek.
         </p>
+        <p><img src="images/magnolia.jpg" class="img-thumbnail" alt="Magnolia"title="Magnolia"></p>
       </div>
     </div>
     <div class="row">
@@ -67,11 +72,12 @@
         <p>A hibiszkusz vagy mályvacserje (Hibiscus) a mályvavirágúak (Malvales) közé tartozó mályvafélék (Malvaceae)
           egyik legváltozatosabb nemzetsége mintegy 200-300 fajjal, melyek közül feltűnő virágai miatt többet szerte a
           világon dísznövényként termesztenek.
-          Az Ázsiából származó növényt Jean Robin hozta Európába, ő ültette el először a párizsi királyi füvészkertbe.
+          Az Ázsiából származó növényt <a href="https://hu.wikipedia.org/wiki/Jean_Robin" target="_blank">Jean Robin</a> hozta Európába, ő ültette el először a párizsi királyi füvészkertbe.
           Egyes fajai tipikus özönnövények, másokat az ember telepített meg szerte a világon. A fajok többsége a
           trópusokon, szubtrópusokon és a meleg mérsékelt éghajlatú területeken él, közöttük akadnak egyévesek és
           évelők, fás- és lágyszárúak, lombhullatók és örökzöldek is.
         </p>
+        <p><img src="images/hibiszkusz.jpg" class="img-thumbnail" alt="Hibiszkusz" title="Hibiszkusz"></p>
       </div>
       <div class="col-md-6 bg-torzs">
         <h3>Kála</h3>
@@ -80,6 +86,7 @@
           találunk kála virágot. A nagy fehér virágúak május környékén kezdenek virágozni, a színes hibridek pedig
           nyáron hoznak virágokat. A kála 1-2,5 méterig is megnőhet, levelei 15-45 cm közöttiek. A levelek tölcsér
           alakúak, a virágok buroklevéllel körülfogott torzsavirágzatúak. A virágok 2-6 hétig is megmaradnak. </p>
+          <p><img src="images/kála.jpg" class="img-thumbnail" alt="Kála" title="Kála"></p>
       </div>
     </div>
   </div>
