--- a/Gyakorlás 2/Forrás/3. Egzotikus virágok/egzotikus.html
+++ b/Gyakorlás 2/Forrás/3. Egzotikus virágok/egzotikus.html
@@ -67,7 +67,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-4">
         <h3>Hibiszkusz</h3>
         <p>A hibiszkusz vagy mályvacserje (Hibiscus) a mályvavirágúak (Malvales) közé tartozó mályvafélék (Malvaceae)
           egyik legváltozatosabb nemzetsége mintegy 200-300 fajjal, melyek közül feltűnő virágai miatt többet szerte a
@@ -79,7 +79,7 @@
         </p>
         <p><img src="images/hibiszkusz.jpg" class="img-thumbnail" alt="Hibiszkusz" title="Hibiszkusz"></p>
       </div>
-      <div class="col-md-6 bg-torzs">
+      <div class="col-md-4">
         <h3>Kála</h3>
         <p>Őshazája a Afrika. Az örökzöld fajok Afrika nyugati részéről, a virágzó színes hibridek Afrika keleti részéről származnak. Mára a nemesítéseknek köszönhetően több faját is megtalálhatjuk, így különböző színekben
           pompázhatnak lakásunkban. A fehéren kívül sárga, lila, rózsaszín, bordó, orgona, lazac, narancs színben is
@@ -87,6 +87,12 @@
           nyáron hoznak virágokat. A kála 1-2,5 méterig is megnőhet, levelei 15-45 cm közöttiek. A levelek tölcsér
           alakúak, a virágok buroklevéllel körülfogott torzsavirágzatúak. A virágok 2-6 hétig is megmaradnak. </p>
           <p><img src="images/kála.jpg" class="img-thumbnail" alt="Kála" title="Kála"></p>
+      </div>
+      <div class="col-md-6">
+        <h3>Guzmália</h3>
+        <p>Guzmánia
+          A lakberendezők elengedhetetlennek tartják a modern dekorációs terveik megvalósításához, de a kezdő szobakertészek elriadnak tőle, mert úgy hiszik, hogy ennek a gyakran színpompás növénynek a nevelése meghaladja a képességeiket. De ebben tévednek, hiszen kevés növényfaj van, amelyiknek egyszerűbb lenne a gondozása, mint a broméliának.Télen igazán szépen mutat: ekkor hozza színes felleveleit a tőlevélrózsa közepén. A levelei puhák, fényesek és sima szélűek, elérhetik a 45 cm hosszúságot és a 3 cm szélességet is. A guzmánia virágzata apró, sárga virágokból áll, amit körbevesznek a narancs vagy vörös vagy rózsás árnyalatú fellevelek.</p>
+          <p><img src="images/guzmaniak.jpg" class="img-thumbnail" alt="Guzmália" title="Guzmália"></p>
       </div>
     </div>
   </div>
