--- a/Gyakorlás 3/Források/Weboldal/bosszuallok.html
+++ b/Gyakorlás 3/Források/Weboldal/bosszuallok.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="bootstrap-5.3.0-alpha3-dist/css/bootstrap.min.css">
+    <title>Bosszúállók</title>
 </head>
 <body>
     <header>
